<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <array name="sample_list">
        <item>Action Button Progress sample</item>
        <item>Action Button Endless Progress sample</item>
        <item>Submit Button Progress sample</item>
        <item>Generate Button Progress sample</item>
        <item>Button State sample</item>
    </array>


    <!--主页tab-->
    <string name="main_fragment_select_your_tab">选择你关注的tab</string>

    <!--启动界面-->
    <string name="app_name">抖音头条版</string>
    <string name="start_to_login_msg">去登录</string>

    <!--登录页面-->
    <string name="login_button_msg">登录</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_to_sign_up_msg">注册</string>
    <string name="login_header_msg">欢迎来到字节</string>
    <string name="login_notification_msg">未注册的手机号验证后将自动创建账号</string>
    <string name="login_photo_msg">笑脸</string>
    <string name="login_test_button">测试页面</string>
    <string name="login_copy_right_msg">版权所有 翻版必究</string>


    <string name="home_to_search_activity_button">跳转到搜索页面</string>


    <!-- 个人资料页面 -->
    <string name="user_name">用户名</string>
    <string name="user_description">个性签名</string>
    <string name="following">关  注</string>
    <string name="help">帮助反馈</string>
    <string name="user_main_exit_msg">退出登录</string>
    <string name="user_main_cross_setting">十字滑动设置</string>
    <string name="user_main_tab_setting">TAB设置</string>

    <!-- 导航栏 -->
    <string name="setting">设置中心</string>
    <string name="main_page">首页</string>


    <string name="my_page">我的</string>

    <!--文字资讯展示页-->
    <string name="news_image_msg">图片</string>
    <string name="news_text_header_msg">标题</string>
    <string name="news_text_abstract_msg">摘要</string>

    <!--新闻详情页面-->
    <string name="news_detail_comments_button_msg">查看评论</string>

    <!--评论-->
    <string name="comment_comment_time_msg">评论时间</string>
    <string name="comment_user_image_msg">用户头像</string>
    <string name="comment_username_msg">用户名</string>
    <string name="comment_comment_content_msg">用户评论</string>
    <string name="comment_post_comment_button_msg">发表评论</string>
    <string name="comment_see_tags_button_msg">查看标签</string>

    <!-- 临时字符串 -->
    <string name="view_user_main_page">点击预览个人资料界面</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_page_to_news_msg">看新闻</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--注册页-->
    <string name="play_video">播放视频</string>
    <string name="resign">快速注册</string>


    <string name="button_unfollow">取消关注按钮</string>


    <!--页脚-->
    <string name="news_footer_msg">正在加载</string>

    <!--搜索页面-->
    <string name="search_input_text_hint">请输入搜索信息</string>
    <string name="search_input_button_msg">去搜索</string>
    <string name="search_show_news_msg">文字资讯</string>
    <string name="search_show_video_msg">视频资讯</string>


    <!--关注页面-->
    <string name="followTagsList">事件</string>
    <string name="followAuthorList">用户</string>
    <string name="AuthorDetails">被关注者页面</string>
    <string name="textView_author_name">作者名字</string>
    <string name="follow_author_details_describe">作者描述</string>
    <string name="AuthorDetailsImage">被关注者（作者）头像</string>
    <string name="FollowAuthorDetailsImage">被关注者头像</string>
    <string name="author_name">用户名</string>
    <string name="author_describe">用户描述</string>
    <string name="button_authorList_unfollow">取消关注按钮</string>
    <string name="button_news_details_follow" />
    <string name="button_newsDetails_follow">关注按钮</string>
    <string name="toasty_unFollow_start">取消关注了</string>
    <string name="toasty_follow_start">关注了</string>
    <string name="button_text_insert_follow">关注</string>
    <string name="button_text_del_follow">已关注</string>


    <!-- 视频播放页 -->
    <string name="video_play_requesting">正在刷新中,请稍等...</string>
    <string name="video_play_no_more">没有更多的视频了</string>
    <string name="video_play_request_fail">网络请求失败,错误码:</string>
    <string name="video_play_followed">关注了 </string>
    <string name="video_play_unFollowed">取消关注了 </string>
    <string name="video_play_uninterested">以后不会在为您推荐类似视频</string>
    <string name="video_play_reported">已举报！</string>
    <string name="video_play_transform_no_support">此视频不支持转换！</string>


    <!-- 混合列表页页 -->
    <string name="mix_list_requesting">正在刷新中,请稍等...</string>
    <string name="mix_list_no_more">没有更多的资讯了</string>
    <string name="mix_list_request_fail">网络请求失败,错误码:</string>

    <!-- 视频评论页 -->

    <string name="video_comment_request_fail">网络请求失败,错误码:</string>
    <string name="editInfoSaveButton">保存编辑信息</string>


    <string name="blank_result_msg">暂时无数据哦</string>
    <string name="editPagerTitle">编辑用户信息</string>
    <string name="userPhoneId">用户账号</string>
    <string name="userMainText">粉丝：1   ｜关注：20    ｜获赞：5</string>
    <string name="authorSpace">作品空间</string>


    <!-- tab 设置-->
    <string name="tab_setting_save_failed">保存失败，是否继续退出？</string>
    <string name="tab_setting_save_failed_title">保存失败</string>
    <string name="tab_setting_quit">退出</string>
    <string name="tab_setting_stay">取消</string>
    <string name="tab_setting_saving">正在保存</string>

    <!-- 警告窗口 -->
    <string name="alertDialog_follow_title">取消关注?</string>
    <string name="alertDialog_follow_message_start">确定要取消关注</string>
    <string name="alertDialog_follow_message_end">吗？</string>
    <string name="alertDialog_follow_navigationButton">取消</string>
    <string name="alertDialog_follow_positiveButton">确定</string>

</resources>