<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <ImageView
        android:id="@+id/imageViewUserImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:contentDescription="@string/comment_user_image_msg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_item_author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comment_username_msg"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCommentContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCommentContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comment_comment_content_msg"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCommentTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_item_author_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_item_author_name" />

    <TextView
        android:id="@+id/textViewCommentTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comment_comment_time_msg"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewCommentContent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCommentContent" />

</androidx.constraintlayout.widget.ConstraintLayout>